--- a/account/static/css/sogis.css
+++ b/account/static/css/sogis.css
@@ -293,3 +293,9 @@ td.comprtInfo-td{
     color: #f1f2f2;
     font-family: "Microsoft YaHei UI Light";
 }
+
+
+#ndvicolor{
+    width: 200px;
+    height: 20px;
+}
