--- a/soshine/templates/ABClistDiv.html
+++ b/soshine/templates/ABClistDiv.html
@@ -9,6 +9,38 @@
     <!--地块列表|呼伦贝尔-->
     <div id="panel-element-demo-Hulbr" class="panel-collapse collapse">
         <div class="blocklist-heading" >
+            <span id="Demo_Area_Hulbr_T" class="glyphicon glyphicon-map-marker" onclick=""></span>
+            <span id="Demo_Area_Hulbr_T_outline">呼伦贝尔农垦特泥河农牧场</span>
+            <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#panel-blocklist"
+                  data-target="#panel-element-demo-Hulbr_T" style="float: right"></span>
+        </div>
+        <div id="panel-element-demo-Hulbr_T" class="panel-collapse collapse">
+            <div id="Demo_Comprt_Hulbr_T_01" class="Blockname panel-body" >
+                <span id="Demo_Comprt_Hulbr_T_01_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
+                区划01|农场A
+            </div>
+            <div id="Demo_Comprt_Hulbr_T_02" class="Blockname panel-body">
+                <span id="Demo_Comprt_Hulbr_T_02_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
+                区划02|农场B
+            </div>
+        </div>
+        <div class="blocklist-heading" >
+            <span id="Demo_Area_Hulbr_X" class="glyphicon glyphicon-map-marker" onclick=""></span>
+            <span id="Demo_Area_Hulbr_X_outline">呼伦贝尔农垦谢尔塔拉农牧场</span>
+            <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#panel-blocklist"
+                  data-target="#panel-element-demo-Hulbr_X" style="float: right"></span>
+        </div>
+        <div id="panel-element-demo-Hulbr_X" class="panel-collapse collapse">
+            <div id="Demo_Comprt_Hulbr_X_01" class="Blockname panel-body" >
+                <span id="Demo_Comprt_Hulbr_X_01_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
+                区划01|农场A
+            </div>
+            <div id="Demo_Comprt_Hulbr_X_02" class="Blockname panel-body">
+                <span id="Demo_Comprt_Hulbr_X_02_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
+                区划02|农场B
+            </div>
+        </div>
+        <div class="blocklist-heading" >
             <span id="Demo_Area_Hulbr_A" class="glyphicon glyphicon-map-marker" onclick=""></span>
             <span id="Demo_Area_Hulbr_A_outline">呼伦贝尔农垦地块A</span>
             <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#panel-blocklist"
@@ -39,6 +71,70 @@
                 <span id="Demo_Comprt_Hulbr_B_04_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
                 区划04|农场D
             </div>
+        </div>
+    </div>
+</div>
+
+<!--赵光-->
+<div class="panel-group blocklist" id="panel-blocklist">
+    <div class="blocklist-heading-Area">
+        <a href="{% url 'soshine:somap' 6 %}" target="_blank"><span id="Demo_Area_Zhaoguang" class="glyphicon glyphicon-map-marker" onclick="" style="cursor: pointer"></span></a>
+        <span id="Demo_Area_Zhaoguang_loc" style="cursor: pointer">赵光农垦</span>
+        <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
+              data-target="#panel-element-demo-Zhaoguang"  style="float: right;cursor: pointer"></span>
+    </div>
+    <!--地块列表|赵光农场1-5块-->
+    <div id="panel-element-demo-Zhaoguang" class="panel-collapse collapse">
+        <div class="blocklist-heading">
+            <span id="Demo_Area_Zhaoguang_A" class="glyphicon glyphicon-map-marker" onclick=""></span>
+            <span id="Demo_Area_Zhaoguang_A_outline">赵光农垦地块A</span>
+            <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#panel-blocklist"
+                  data-target="#panel-element-demo-Zhaoguang_A" style="float: right"></span>
+        </div>
+        <div id="panel-element-demo-Zhaoguang_A" class="panel-collapse collapse">
+            <div id="Demo_Comprt_Zhaoguang_A_01" class="Blockname panel-body">
+                <span id="Demo_Comprt_Zhaoguang_A_01_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
+                区划01|东区第一大队
+            </div>
+            <div id="Demo_Comprt_Zhaoguang_A_02" class="Blockname panel-body">
+                <span id="Demo_Comprt_Zhaoguang_A_02_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
+                区划02|东区第二大队
+            </div>
+            <div id="Demo_Comprt_Zhaoguang_A_03" class="Blockname panel-body">
+                <span id="Demo_Comprt_Zhaoguang_A_03_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
+                区划03|东区第三大队
+            </div>
+            <div id="Demo_Comprt_Zhaoguang_A_04" class="Blockname panel-body">
+                <span id="Demo_Comprt_Zhaoguang_A_04_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
+                区划04|东区第四大队
+            </div>
+            <div id="Demo_Comprt_Zhaoguang_A_05" class="Blockname panel-body">
+                <span id="Demo_Comprt_Zhaoguang_A_05_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
+                区划05|东区第五大队
+            </div>
+        </div>
+
+            <!--地块列表|赵光农场1-5块-->
+        <div class="blocklist-heading">
+            <span id="Demo_Area_Zhaoguang_B" class="glyphicon glyphicon-map-marker" onclick=""></span>
+            <span id="Demo_Area_Zhaoguang_B_outline">赵光农垦地块B</span>
+            <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#panel-blocklist"
+                  data-target="#panel-element-demo-Zhaoguang_B" style="float: right"></span>
+        </div>
+        <div id="panel-element-demo-Zhaoguang_B" class="panel-collapse collapse">
+            <div id="Demo_Comprt_Zhaoguang_B_01" class="Blockname panel-body">
+                <span id="Demo_Comprt_Zhaoguang_B_01_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
+                区划01|西区第一大队
+            </div>
+            <div id="Demo_Comprt_Zhaoguang_B_02" class="Blockname panel-body">
+                <span id="Demo_Comprt_Zhaoguang_B_02_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
+                区划02|西区第二大队
+            </div>
+            <div id="Demo_Comprt_Zhaoguang_B_03" class="Blockname panel-body">
+                <span id="Demo_Comprt_Zhaoguang_B_03_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
+                区划03|西区第三大队
+            </div>
+
         </div>
     </div>
 </div>
@@ -360,69 +456,7 @@
     </div>
 </div>
 
-<!--赵光-->
-<div class="panel-group blocklist" id="panel-blocklist">
-    <div class="blocklist-heading-Area">
-        <a href="{% url 'soshine:somap' 6 %}" target="_blank"><span id="Demo_Area_Zhaoguang" class="glyphicon glyphicon-map-marker" onclick="" style="cursor: pointer"></span></a>
-        <span id="Demo_Area_Zhaoguang_loc" style="cursor: pointer">赵光农垦</span>
-        <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
-              data-target="#panel-element-demo-Zhaoguang"  style="float: right;cursor: pointer"></span>
-    </div>
-    <!--地块列表|赵光农场1-5块-->
-    <div id="panel-element-demo-Zhaoguang" class="panel-collapse collapse">
-        <div class="blocklist-heading">
-            <span id="Demo_Area_Zhaoguang_A" class="glyphicon glyphicon-map-marker" onclick=""></span>
-            <span id="Demo_Area_Zhaoguang_A_outline">赵光农垦地块A</span>
-            <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#panel-blocklist"
-                  data-target="#panel-element-demo-Zhaoguang_A" style="float: right"></span>
-        </div>
-        <div id="panel-element-demo-Zhaoguang_A" class="panel-collapse collapse">
-            <div id="Demo_Comprt_Zhaoguang_A_01" class="Blockname panel-body">
-                <span id="Demo_Comprt_Zhaoguang_A_01_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划01|东区第一大队
-            </div>
-            <div id="Demo_Comprt_Zhaoguang_A_02" class="Blockname panel-body">
-                <span id="Demo_Comprt_Zhaoguang_A_02_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划02|东区第二大队
-            </div>
-            <div id="Demo_Comprt_Zhaoguang_A_03" class="Blockname panel-body">
-                <span id="Demo_Comprt_Zhaoguang_A_03_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划03|东区第三大队
-            </div>
-            <div id="Demo_Comprt_Zhaoguang_A_04" class="Blockname panel-body">
-                <span id="Demo_Comprt_Zhaoguang_A_04_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划04|东区第四大队
-            </div>
-            <div id="Demo_Comprt_Zhaoguang_A_05" class="Blockname panel-body">
-                <span id="Demo_Comprt_Zhaoguang_A_05_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划05|东区第五大队
-            </div>
-        </div>
 
-            <!--地块列表|赵光农场1-5块-->
-        <div class="blocklist-heading">
-            <span id="Demo_Area_Zhaoguang_B" class="glyphicon glyphicon-map-marker" onclick=""></span>
-            <span id="Demo_Area_Zhaoguang_B_outline">赵光农垦地块B</span>
-            <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#panel-blocklist"
-                  data-target="#panel-element-demo-Zhaoguang_B" style="float: right"></span>
-        </div>
-        <div id="panel-element-demo-Zhaoguang_B" class="panel-collapse collapse">
-            <div id="Demo_Comprt_Zhaoguang_B_01" class="Blockname panel-body">
-                <span id="Demo_Comprt_Zhaoguang_B_01_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划01|西区第一大队
-            </div>
-            <div id="Demo_Comprt_Zhaoguang_B_02" class="Blockname panel-body">
-                <span id="Demo_Comprt_Zhaoguang_B_02_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划02|西区第二大队
-            </div>
-            <div id="Demo_Comprt_Zhaoguang_B_03" class="Blockname panel-body">
-                <span id="Demo_Comprt_Zhaoguang_B_03_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划03|西区第三大队
-            </div>
-
-        </div>
-    </div>
-</div>
 
 <!--新疆-->
 <div class="panel-group blocklist" id="panel-blocklist">
