--- a/soshine/templates/LayerDiv.html
+++ b/soshine/templates/LayerDiv.html
@@ -26,6 +26,9 @@
         <div id="collapseOption-NDVI" class="panel-collapse collapse">
             <div class="panel-body">
                 <div class="option-info">归一化植被覆盖指数（Normalized Difference Vegetation Index，缩写NDVI）对比从植物叶子反射的红光和近红外波段。应用于检测植被生长状态、植被覆盖度等。</div>
+                <div class="option-info" id="ndvicolor"><img src="/static/img/BLhl.png"></div>
+                <div class="option-info">-1————————————0————————————1</div>
+                <!--
                 <div id="slider-NDVI">
                     <p>
                       <label for="amount">范围：</label>
@@ -34,6 +37,8 @@
 
                     <div id="slider-range"></div>
                 </div>
+                -->
+
             </div>
         </div>
     </div>
