--- a/soshine/templates/AboutDiv.html
+++ b/soshine/templates/AboutDiv.html
@@ -1,4 +1,4 @@
-<div id="comprtInfo">
+<div id="comprtInfo" style="display:none">
     <h3 class="comprtInfo-content" id="blocktitle">地区--地块--区划--</h3>
     <div class="alert alert-info" id="comprtInfo-status">状态:---</div>
     <table>
