--- a/soshine/templates/IntroDiv.html
+++ b/soshine/templates/IntroDiv.html
@@ -22,7 +22,7 @@
     </ul>
 </div>
 
-<div class="intro"  id="Aintro" style="display:none">
+<div class="intro" id="Aintro" style="display:none">
     <h3>博罗镇罗阳县</h3>
     <p>
         农林用地8920公顷，有林面积8533公顷，种植率97.5%，绿化率80.8%，覆盖率45.1%。完成天然林管护和生态公益林改造，其中，实施林管护面积2500亩、生态公益林改造面积2500亩、育林木苗5.5万株、义务植树5.5万株。粮食种植面积2.8万亩，农作物播种面积6.69万亩。
@@ -56,7 +56,7 @@
 
 </div>
 
-<div class="intro"  id="Bintro0001" style="display:none">
+<div class="intro" id="Bintro0001" style="display:none">
     <table border="1" width="100%">
         <tbody>
             <tr><td>林班</td><td>0001</td><td></td><td></td></tr>
@@ -93,7 +93,7 @@
     </table>
 </div>
 
-<div class="intro"  id="Bintro0002" style="display:none">
+<div class="intro" id="Bintro0002" style="display:none">
     <table border="1" width="100%">
         <tbody>
             <tr><td>林班</td><td>0002</td><td></td><td></td></tr>
@@ -131,7 +131,7 @@
 </div>
 
 <!--BL 0001 0001-->
-<div class="intro"  id="Cintro00010001" style="display:none">
+<div class="intro" id="Cintro00010001" style="display:none">
     <div class="tabbable" id="tabs-00010001">
         <ul class="nav nav-tabs">
             <li class="active">
@@ -184,7 +184,7 @@
     </div>
 </div>
 <!--BL 0001 0002-->
-<div class="intro"  id="Cintro00010002" style="display:none">
+<div class="intro" id="Cintro00010002" style="display:none">
     <div class="tabbable" id="tabs-00010002">
         <ul class="nav nav-tabs">
             <li class="active">
@@ -237,7 +237,7 @@
     </div>
 </div>
 <!--BL 0001 0003-->
-<div class="intro"  id="Cintro00010003" style="display:none">
+<div class="intro" id="Cintro00010003" style="display:none">
     <div class="tabbable" id="tabs-00010003">
         <ul class="nav nav-tabs">
             <li class="active">
@@ -290,7 +290,7 @@
     </div>
 </div>
 <!--BL 0002 0001-->
-<div class="intro"  id="Cintro00020001" style="display:none">
+<div class="intro" id="Cintro00020001" style="display:none">
     <div class="tabbable" id="tabs-00020001">
         <ul class="nav nav-tabs">
             <li class="active">
@@ -343,7 +343,7 @@
     </div>
 </div>
 <!--BL 0002 0002-->
-<div class="intro"  id="Cintro00020002" style="display:none">
+<div class="intro" id="Cintro00020002" style="display:none">
     <div class="tabbable" id="tabs-00020002">
         <ul class="nav nav-tabs">
             <li class="active">
@@ -394,4 +394,51 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="intro" id="HAintro" style="display:none">
+    <h3>呼伦贝尔农垦</h3>
+    <p>
+        呼伦贝尔农垦集团是一个最有条件、最有基础、最有特色、最有潜力、优势明显、后劲十足的大型国有农垦企业：
+    </p>
+    <ul>
+        <li>一是资源丰富，有施业区面积3万平方公里，分布在呼伦贝尔9个旗市区境内，拥有600万亩耕地、1000万亩草场、40万亩林地、13万亩水面；</li>
+        <li>二是规模较大，辖24个县团级现代化农牧场和27个企事业单位，总人口17万，其中各类从业人员7.4万；</li>
+        <li>三是组织化程度高，企业实行准军事化管理模式，是全国仅有的规模化、集约化垦区之一；</li>
+        <li>四是农牧业机械装备能力强，采用世界最先进的大型农机设备为主，总动力74.2万千瓦，田间农业综合机械化水平达95%；</li>
+        <li>五是科技实力雄厚，有各类专业技术人员4263人，农业科技贡献率71.38%，处于全国领先水平；</li>
+        <li>六是区位优越，生态良好，适宜打造绿色有机农产品基地。</li>
+    </ul>
+</div>
+
+<div class="intro" id="HBintro0001" style="display:none">
+    <h3>呼伦贝尔农垦</h3>
+    <h4>特泥河农牧场</h4>
+    <p>
+        特泥河牧场地处陈巴尔虎旗东南部，在东经119 45`￣120 55`、北纬49 13`￣49 50`之间，平均海拔650米。
+        地处呼伦贝尔盟陈巴尔虎旗东南部。场区东西长76公里。南：化宽66公里，总面积为1900平方公里，约占全旗总面积的8.97%。
+        其中草原120万亩，可垦耕地67万亩，林地30万亩，水面5万亩，村屯道路6万亩，低洼沼泽地J0万亩，山岭砂地17万亩。
+    </p>
+    <p>
+        草原面积126万亩，耕地面积38万亩，人工林地面积1.9万亩。
+    </p>
+    <p>
+        全场38万亩耕地全部实施免耕播种，5.48万耕地实现了抗旱节水灌溉；
+        建成了以农业科技研发和新品种繁育推广为核心的科技试验示范园区一处，建成现代化农业样板队两个（二队、四队）。
+        在测土配方施肥技术、水肥一体化技术、免耕滴灌铺管技术等方面积极积累了较好的经验。
+        几年来，农机具更新度系数达到82%，全场拥有国内外先进农机具1207台（件），
+        机械总动力达2.89万千瓦，有水泥晒场29万平方米，晒棚4万平方米。
+    </p>
+</div>
+
+<div class="intro" id="HBintro0002" style="display:none">
+    <h3>呼伦贝尔农垦</h3>
+    <h4>谢尔塔拉农牧场</h4>
+    <p>
+        谢尔塔拉农牧场位于呼伦贝尔市境内，距首府海拉尔区24公里。
+        这里景色优美、草原广袤，聚集着蒙、汉、达斡尔、鄂温克、满、回等13个少数民族。
+        2004年组建了海拉尔农垦（集团）有限责任公司谢尔塔拉分公司。
+        拥有土地面积578平方公里，其中耕地面积29.7万亩，草场51.9万亩，林地24.3万亩，
+        机械总动力2.3万千瓦，牲畜存栏2万头（匹、只），其中基础奶牛4000头，年产鲜奶2万吨。
+    </p>
 </div>
