--- a/soshine/templates/ABClistDiv.html
+++ b/soshine/templates/ABClistDiv.html
@@ -100,23 +100,23 @@
         <div id="panel-element-demo-Zhaoguang_A" class="panel-collapse collapse">
             <div id="Demo_Comprt_Zhaoguang_A_01" class="Blockname panel-body">
                 <span id="Demo_Comprt_Zhaoguang_A_01_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划01|东区第一大队
+                区划01|东区示意地块001
             </div>
             <div id="Demo_Comprt_Zhaoguang_A_02" class="Blockname panel-body">
                 <span id="Demo_Comprt_Zhaoguang_A_02_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划02|东区第二大队
+                区划02|东区示意地块002
             </div>
             <div id="Demo_Comprt_Zhaoguang_A_03" class="Blockname panel-body">
                 <span id="Demo_Comprt_Zhaoguang_A_03_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划03|东区第三大队
+                区划03|东区示意地块003
             </div>
             <div id="Demo_Comprt_Zhaoguang_A_04" class="Blockname panel-body">
                 <span id="Demo_Comprt_Zhaoguang_A_04_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划04|东区第四大队
+                区划04|东区示意地块004
             </div>
             <div id="Demo_Comprt_Zhaoguang_A_05" class="Blockname panel-body">
                 <span id="Demo_Comprt_Zhaoguang_A_05_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划05|东区第五大队
+                区划05|东区示意地块005
             </div>
         </div>
 
@@ -130,15 +130,15 @@
         <div id="panel-element-demo-Zhaoguang_B" class="panel-collapse collapse">
             <div id="Demo_Comprt_Zhaoguang_B_01" class="Blockname panel-body">
                 <span id="Demo_Comprt_Zhaoguang_B_01_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划01|西区第一大队
+                区划01|西区示意地块001
             </div>
             <div id="Demo_Comprt_Zhaoguang_B_02" class="Blockname panel-body">
                 <span id="Demo_Comprt_Zhaoguang_B_02_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划02|西区第二大队
+                区划02|西区示意地块002
             </div>
             <div id="Demo_Comprt_Zhaoguang_B_03" class="Blockname panel-body">
                 <span id="Demo_Comprt_Zhaoguang_B_03_loc" class="glyphicon glyphicon-map-marker" style="cursor: pointer"></span>
-                区划03|西区第三大队
+                区划03|西区示意地块003
             </div>
 
         </div>
