--- a/soshine/templates/sogis.html
+++ b/soshine/templates/sogis.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
     <title>SoshineSee Scene</title>
+    <link rel="shortcut icon" href="http://www.soshinetech.com/favicon.ico">
 
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
