--- a/soshine/templates/somap.html
+++ b/soshine/templates/somap.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
 	<title>{{ abc_name }}</title>
+    <link rel="shortcut icon" href="http://www.soshinetech.com/favicon.ico">
 
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}" />
