--- a/account/static/css/register.css
+++ b/account/static/css/register.css
@@ -1,5 +1,5 @@
 div#register_container{
-    background-image: url(../img/soshinetechbg/indexbg.png);
+    background-image: url(../img/soshinetechbg/indexbg_s.jpg);
     position: absolute;
     width: 100%;
     height: 100%;
