--- a/soshine/templates/ABClistDiv.html
+++ b/soshine/templates/ABClistDiv.html
@@ -408,7 +408,7 @@
 <!--博罗-->
 <div class="panel-group blocklist" id="panel-blocklist">
     <div class="blocklist-heading-Area">
-        <a href="{% url 'soshine:somap' 5 %}" target="_blank"><span id="Demo_Area_Boluo" class="glyphicon glyphicon-fullscreen"  style="cursor: pointer"></span></a>
+        <a href="{% url 'soshine:somap' 5 %}" target="_blank" data-toggle="tooltip" title="点击图标显示详细数据" ><span id="Demo_Area_Boluo" class="glyphicon glyphicon-fullscreen"  style="cursor: pointer"></span></a>
         <span id="Demo_Area_Boluo_loc" style="cursor: pointer" onclick="change_intro('BL')">博罗县罗阳镇</span>
         <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#listBar"
               data-target="#panel-element-demo-Boluo"  style="float: right;cursor: pointer"></span>
@@ -416,45 +416,45 @@
     <!--地块列表|博罗县罗阳镇细1-3块-->
     <div id="panel-element-demo-Boluo" class="panel-collapse collapse">
         <div class="blocklist-heading">
-            <a href="{% url 'soshine:somap' 50001 %}" target="_blank"><span id="Demo_Area_Boluo_A" class="glyphicon glyphicon-fullscreen" onclick=""></span></a>
-            <span id="Demo_Block_Boluo_A_outline" onclick="change_intro('BL_0001')">博罗县罗阳镇示例林业区域甲</span>
+            <a href="{% url 'soshine:somap' 50001 %}" target="_blank" data-toggle="tooltip" title="点击图标显示详细数据" ><span id="Demo_Area_Boluo_A" class="glyphicon glyphicon-fullscreen" onclick=""></span></a>
+            <span id="Demo_Block_Boluo_A_outline" onclick="change_intro('BL_0001')" >博罗县罗阳镇示例林业区域甲</span>
             <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#panel-blocklist"
                   data-target="#panel-element-demo-Boluo_A" style="float: right" ></span>
 
         </div>
         <div id="panel-element-demo-Boluo_A" class="panel-collapse collapse">
             <div id="Demo_Comprt_Boluo_A_01" class="Blockname panel-body ">
-                <a href="{% url 'soshine:somap' 500010001 %}" target="_blank"><span id="Demo_Comprt_Boluo_A_01_info" class="glyphicon glyphicon-fullscreen" style="cursor: pointer"></span></a>
+                <a href="{% url 'soshine:somap' 500010001 %}" target="_blank" data-toggle="tooltip" title="点击图标显示详细数据" ><span id="Demo_Comprt_Boluo_A_01_info" class="glyphicon glyphicon-fullscreen" style="cursor: pointer"></span></a>
                 <span id="Demo_Comprt_Boluo_A_01_loc" style="cursor: pointer" onclick="change_intro('BL_0001_0001')">示例林班0001小班0001</span>
             </div>
             <div id="Demo_Comprt_Boluo_A_02" class="Blockname panel-body">
-                <a href="{% url 'soshine:somap' 500010002 %}" target="_blank"><span id="Demo_Comprt_Boluo_A_02_info" class="glyphicon glyphicon-fullscreen" style="cursor: pointer"></span></a>
+                <a href="{% url 'soshine:somap' 500010002 %}" target="_blank" data-toggle="tooltip" title="点击图标显示详细数据" ><span id="Demo_Comprt_Boluo_A_02_info" class="glyphicon glyphicon-fullscreen" style="cursor: pointer"></span></a>
                 <span id="Demo_Comprt_Boluo_A_02_loc" style="cursor: pointer" onclick="change_intro('BL_0001_0002')">示例林班0001小班0002</span>
             </div>
             <div id="Demo_Comprt_Boluo_A_03" class="Blockname panel-body">
-                <a href="{% url 'soshine:somap' 500010003 %}" target="_blank"><span id="Demo_Comprt_Boluo_A_03_info" class="glyphicon glyphicon-fullscreen"  style="cursor: pointer"></span></a>
+                <a href="{% url 'soshine:somap' 500010003 %}" target="_blank" data-toggle="tooltip" title="点击图标显示详细数据" ><span id="Demo_Comprt_Boluo_A_03_info" class="glyphicon glyphicon-fullscreen"  style="cursor: pointer"></span></a>
                 <span id="Demo_Comprt_Boluo_A_03_loc" style="cursor: pointer" onclick="change_intro('BL_0001_0003')">示例林班0001小班0003</span>
             </div>
         </div>
 
         <!--地块列表|博罗县罗阳镇细2-2块-->
         <div class="blocklist-heading">
-            <a href="{% url 'soshine:somap' 50002 %}" target="_blank"><span id="Demo_Area_Boluo_B" class="glyphicon glyphicon-fullscreen" onclick=""></span></a>
+            <a href="{% url 'soshine:somap' 50002 %}" target="_blank" data-toggle="tooltip" title="点击图标显示详细数据" ><span id="Demo_Area_Boluo_B" class="glyphicon glyphicon-fullscreen" onclick=""></span></a>
             <span id="Demo_Block_Boluo_B_outline" onclick="change_intro('BL_0002')">博罗县罗阳镇示例林业区域乙</span>
             <span class="glyphicon glyphicon-chevron-down" data-toggle="collapse" data-parent="#panel-blocklist"
                   data-target="#panel-element-demo-Boluo_B" style="float: right" ></span>
         </div>
         <div id="panel-element-demo-Boluo_B" class="panel-collapse collapse">
             <div id="Demo_Comprt_Boluo_B_01" class="Blockname panel-body">
-                <a href="{% url 'soshine:somap' 500020001 %}" target="_blank"><span id="Demo_Comprt_Boluo_B_01_info" class="glyphicon glyphicon-fullscreen" style="cursor: pointer"></span></a>
+                <a href="{% url 'soshine:somap' 500020001 %}" target="_blank" data-toggle="tooltip" title="点击图标显示详细数据" ><span id="Demo_Comprt_Boluo_B_01_info" class="glyphicon glyphicon-fullscreen" style="cursor: pointer"></span></a>
                 <span id="Demo_Comprt_Boluo_B_01_loc" style="cursor: pointer" onclick="change_intro('BL_0002_0001')">示例林班0002小班0001</span>
             </div>
             <div id="Demo_Comprt_Boluo_B_02" class="Blockname panel-body">
-                <a href="{% url 'soshine:somap' 500020002 %}" target="_blank"><span id="Demo_Comprt_Boluo_B_02_info" class="glyphicon glyphicon-fullscreen" style="cursor: pointer"></span></a>
+                <a href="{% url 'soshine:somap' 500020002 %}" target="_blank" data-toggle="tooltip" title="点击图标显示详细数据" ><span id="Demo_Comprt_Boluo_B_02_info" class="glyphicon glyphicon-fullscreen" style="cursor: pointer"></span></a>
                 <span id="Demo_Comprt_Boluo_B_02_loc" style="cursor: pointer" onclick="change_intro('BL_0002_0002')">示例林班0002小班0002</span>
             </div>
             <div id="Demo_Comprt_Boluo_B_03" class="Blockname panel-body">
-                <a href="{% url 'soshine:somap' 500020003 %}" target="_blank"><span id="Demo_Comprt_Boluo_B_03_info" class="glyphicon glyphicon-fullscreen" style="cursor: pointer"></span></a>
+                <a href="{% url 'soshine:somap' 500020003 %}" target="_blank" data-toggle="tooltip" title="点击图标显示详细数据" ><span id="Demo_Comprt_Boluo_B_03_info" class="glyphicon glyphicon-fullscreen" style="cursor: pointer"></span></a>
                 <span id="Demo_Comprt_Boluo_B_03_loc" style="cursor: pointer" onclick="change_intro('BL_0002_0003')">示例林班0002小班0003</span>
             </div>
         </div>
